--- a/MMNX.html
+++ b/MMNX.html
@@ -3806,7 +3806,7 @@
 			<div id="noteContainer">
 				<section class="wy-notes-wrapper">
 					<header class="note-title-wrapper">
-						<h2 class="note-title">图包回归！</h2>
+						<h2 class="note-title">图包回归！3.0 </h2>
 						<time class="note-time">2023-07-24 17:14:08 有图片加载不出来刷新即可</time>
 					</header>
 					<article class="note-body">
